View Issue Details

IDProjectCategoryView StatusLast Update
0026890Open CASCADEOCCT:Foundation Classespublic2016-04-20 15:51
ReporteriskAssigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026890: Foundation Classes, TKernel - define OSD_OpenStream for std::ifstream
DescriptionOSD_OpenFile lacks OSD_OpenStream methods for std::ifstream.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2015-11-18 12:45

administrator   ~0048343

Branch CR26890 has been created by isk.

SHA-1: f74fce2dbcb71221e6d648c05f16215eda5ed2e6


Detailed log of new commits:

Author: isk
Date: Wed Nov 18 11:22:57 2015 +0300

    0026890: Foundation Classes, TKKernel - OSD_OpenFile lacks OSD_OpenStream for std::ifstream

isk

2015-11-18 12:52

developer   ~0048344

Dear Kirill,
please review the branch CR26890.

kgv

2015-11-18 13:55

developer   ~0048347

Please update commit description.

git

2015-11-18 14:10

administrator   ~0048348

Branch CR26890 has been updated forcibly by isk.

SHA-1: 5896ae196922491f8109c82815c3da87c7947023

git

2015-11-18 15:49

administrator   ~0048355

Branch CR26890 has been updated forcibly by isk.

SHA-1: 1589886d9a1e6dd2a9698cadd2f9c87368065dd1

kgv

2015-11-18 15:50

developer   ~0048356

Please check compilation, testing is not needed.

ski

2015-11-19 14:03

developer   ~0048374

Dear BugMaster,

Branch CR26890 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms.
SHA-1: 1589886d9a1e6dd2a9698cadd2f9c87368065dd1

Number of compiler warnings:
occt component:
   Linux: 0 (0 on master)
   Windows: 0 (0 on master)
   MacOS: 129 (129 on master)
products component:
   Linux: 39 (39 on master)
   Windows: 0 (0 on master)

git

2016-04-17 14:14

administrator   ~0053104

Branch CR26890 has been deleted by kgv.

SHA-1: 1589886d9a1e6dd2a9698cadd2f9c87368065dd1

Related Changesets

occt: master b40693b0

2015-11-18 12:49:08

isk


Committer: bugmaster Details Diff
0026890: Foundation Classes, TKernel - define OSD_OpenStream for std::ifstream Affected Issues
0026890
mod - src/OSD/OSD_OpenFile.cxx Diff File
mod - src/OSD/OSD_OpenFile.hxx Diff File

Issue History

Date Modified Username Field Change
2015-11-18 10:10 isk New Issue
2015-11-18 10:10 isk Assigned To => isk
2015-11-18 12:45 git Note Added: 0048343
2015-11-18 12:52 isk Note Added: 0048344
2015-11-18 12:52 isk Assigned To isk => kgv
2015-11-18 12:52 isk Status new => resolved
2015-11-18 12:52 isk Steps to Reproduce Updated
2015-11-18 13:07 kgv Severity minor => feature
2015-11-18 13:07 kgv Summary Foundation Classes, TKKernel - OSD_OpenFile lacks OSD_OpenStream for std::ifstream => Foundation Classes, TKKernel - define OSD_OpenStream for std::ifstream
2015-11-18 13:55 kgv Note Added: 0048347
2015-11-18 13:55 kgv Assigned To kgv => isk
2015-11-18 13:55 kgv Status resolved => assigned
2015-11-18 13:56 kgv Severity feature => trivial
2015-11-18 14:10 git Note Added: 0048348
2015-11-18 14:10 isk Assigned To isk => kgv
2015-11-18 14:10 isk Status assigned => resolved
2015-11-18 14:37 kgv Summary Foundation Classes, TKKernel - define OSD_OpenStream for std::ifstream => Foundation Classes, TKernel - define OSD_OpenStream for std::ifstream
2015-11-18 15:49 git Note Added: 0048355
2015-11-18 15:50 kgv Note Added: 0048356
2015-11-18 15:50 kgv Assigned To kgv => bugmaster
2015-11-18 15:50 kgv Status resolved => reviewed
2015-11-18 17:22 apv Assigned To bugmaster => apv
2015-11-19 13:54 bugmaster Status reviewed => tested
2015-11-19 14:03 ski Note Added: 0048374
2015-11-19 14:06 ski Assigned To apv => bugmaster
2015-11-19 14:09 bugmaster Test case number => Not needed
2015-11-20 12:07 bugmaster Changeset attached => occt master b40693b0
2015-11-20 12:07 bugmaster Status tested => verified
2015-11-20 12:07 bugmaster Resolution open => fixed
2016-04-17 14:14 git Note Added: 0053104
2016-04-20 15:42 aiv Fixed in Version => 7.0.0
2016-04-20 15:51 aiv Status verified => closed