0026890: Foundation Classes, TKernel - define OSD_OpenStream for std::ifstream